# cppDesignPatterns

./: .gitignore  CMakeLists.txt  LICENSE.txt  main.cpp
CMakeScripts/: GetGtest.cmake
singleton/: CMakeLists.txt  Logger.cpp  Logger.h  Logger_Test.cpp  README.md  SingletonExample.h
